@@ -22,6 +22,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <springfox-swagger.version>2.8.0</springfox-swagger.version>
+        <undertow-core.version>2.0.0.Final</undertow-core.version>
     </properties>
 
     <dependencies>
@@ -37,6 +39,7 @@
             </exclusions>
         </dependency>
 
+        <!-- undertow -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
@@ -46,8 +49,9 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>2.0.0.Final</version>
+            <version>${undertow-core.version}</version>
         </dependency>
+        <!-- undertow -->
 
 
         <dependency>
@@ -66,6 +70,21 @@
             <artifactId>spring-boot</artifactId>
         </dependency>
 
+
+        <!-- springfox-swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-swagger.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-swagger.version}</version>
+        </dependency>
+        <!-- springfox-swagger2 -->
+
     </dependencies>
 
     <build>
@@ -74,6 +93,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!-- Fix for Java 9 : Caused by: java.lang.ClassNotFoundException: javax.xml.bind.annotation.XmlType-->
+                    <jvmArguments>--add-modules java.xml.bind</jvmArguments>
+                </configuration>
             </plugin>
 
         </plugins>
